# stanley_controller

./: Animation.cpp  CMakeLists.txt  CubicSpline1D.h  Linear_Interpolation.h  README.md  StanleyController.cpp  StanleyController.h
